--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ライフゲーム</title>
+    <title>(～・ω・)～</title>
     <meta charset="utf-8" content="text/html" http-equiv="Content-Type">
     </meta>
 
     <link
-       href="./css/bootstrap.min.css"
+       href="./full.css"
        rel="stylesheet">
     <link
-       href="./css/life_game.css"
+       href="./board.css"
        rel="stylesheet">
 
     <script
@@ -17,82 +17,35 @@
        type="text/javascript"></script>
 
     <script
-       src="./js/lib.js"
-       type="text/javascript"></script>
-    <script
-       src="./js/panel.js"
+       src="./panel.js"
        type="text/javascript"></script>
 
     <script
-       src="./js/life_game.js"
+       src="./life_game.js"
        type="text/javascript"></script>
     <script
-       src="./js/koch_curve.js"
-       type="text/javascript"></script>
-    <script
-       src="./js/mandelbrot.js"
-       type="text/javascript"></script>
-    <script
-       src="./js/burning_ship.js"
+       src="./state.js"
        type="text/javascript"></script>
 
     <script
-       src="./js/div_canvas.js"
+       src="./life_view.js"
        type="text/javascript"></script>
+
+
   </head>
 
   <body>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href=".">(～・ω・)～(game_of_life)</a>
-          <ul class="nav">
-          </ul>
-        </div>
-      </div>
+    <div id="div_content">
+      <p>ああああ</p>
+      <p>ああああ</p>
+      <p>ああああ</p>
+      ねむいにゃんにゃんにゃん
     </div>
 
-    <div class="container">
-      <div class="hero-unit">
-        <h1>game-of-life</h1>
-      </div>
-      <div id="div_canvas">
-	<div class="input">
-          <select name="draw_select"
-		  id="draw_select">
-            <option value="">選べ</option>
-            <option value="life">ライフゲーム</option>
-            <option value="koch">コッホ曲線</option>
-            <option value="mandel">マンデルブロ集合</option>
-            <option value="burning">バーンシップフラクタル</option>
-            </select>
-	</div>
-	<div id="buttons">
-	  <button class="btn" id="draw_button">描画</button>
-	  <!-- <button class="btn" id="delete_button">消去</button> -->
-	  <button class="btn" id="start_life">スタート</button>
-	  <button class="btn" id="stop_life">一時停止</button>
-	  <button class="btn" id="reset_life">リセット</button>
-	  <button class="btn" id="exit_life">終了</button>
-	  <button class="btn" id="save_life">状態を保存</button>
-	  <button class="btn" id="restore_life">状態を復元</button>
-	  <button class="btn" id="pentadecathlon">pentadecathlon</button>
-	  <button class="btn" id="glider">glider</button>
-	</div>
-	<canvas id="canvas_main" width="800" height="500"></canvas>
-
-	<textarea id="life_text" class="span8">
-	</textarea>
-      </div>
+    <div id="div_canvas">
+      <canvas id="canvas_main"></canvas>
     </div>
 
-    <footer class="foobar">
-      <div class="container">
-        <p>
-          this site maintained by
-          <a href="https://github.com/yuuhik/">ぎりたけ</a>
-        </p>
-      </div>
-    </footer>
+
   </body>
 </html>
